--- a/catalog.pug
+++ b/catalog.pug
@@ -14,8 +14,10 @@ html(lang="ru")
               img(src="img/logo-technomart.svg" alt="logo")
           .search
             form(action="search.html" method="get")
-              label.search-icon(for="search")
               input(type="text" id="search" placeholder="Поиск:")
+              label.search-icon(for="search")
+                svg(xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17")
+                  path(fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
           .bookmarks
             .bookmark-icon
             a(href="") закладки:
@@ -36,14 +38,15 @@ html(lang="ru")
               a.number(href="tel:+78125550555") +7 (812) 555-05-55
             p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
           .authorization
-            a.customer
-              svg(xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18")
-                path(fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z")
-            p.user Равшан Джамшутович
-            a.logout(href="")
-              svg(xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17")
-                path(fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z")
-                path(fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z")
+            .user-login
+              a.customer
+                svg(xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18")
+                  path(fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z")
+                p.user Равшан Джамшутович
+                a.logout(href="")
+                  svg(xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17")
+                    path(fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z")
+                    path(fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z")
             ul.personal
               li.personal-item
                 a(href="") Мои Заказы
@@ -68,25 +71,30 @@ html(lang="ru")
     main.page-content
       .container
         ul.breadcrumbs
-          li.breadcrumbs-item.home
-            a(href="index.html")
           li.breadcrumbs-item
-            a(href="") Каталог
+            a.breadcrumbs-item-link.home(href="index.html")
           li.breadcrumbs-item
-            a(href="") Инструмент
+            a.breadcrumbs-item-link(href="") Каталог
           li.breadcrumbs-item
-            a.current Перфораторы
+            a.breadcrumbs-item-link(href="") Инструмент
+          li.breadcrumbs-item
+            a.breadcrumbs-item-link.current Перфораторы
         h1.content-title Перфораторы
         .catalog-filter
           aside.aside
             p.filter фильтр:
             form(action="https://echo.htmlacademy.ru/courses" method="get")
-              fieldset.choose-filter-0
+              fieldset.choose-filter-range
                 legend цена:
-                .choose-price
-                  label(for="rating")
-                  input(id="rate" name="rate" min="0" max="30000" step="500" value="0")
-                  input(id="rate" name="rate" min="0" max="30000" step="500" value="30000")
+                .range-filter
+                  .range-controls
+                    .scale
+                      .bar
+                    .toggle.toggle-min
+                    .toggle.toggle-max
+                  .price-controls
+                    input(name="min-price" type="number" value="0")
+                    input(name="max-price" type="number" value="30000")
               fieldset.choose-filter
                 legend Производители:
                 p
@@ -131,7 +139,7 @@ html(lang="ru")
                 li.arrow-item
                   a.arrow(href="" aria-label="down")
                     svg(xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10")
-                    path(fill="#231F20" d="M5.5 10L0 0h11")
+                      path(fill="#231F20" d="M5.5 10L0 0h11")
             .goods-item
               a(href="")
                 img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
@@ -151,6 +159,7 @@ html(lang="ru")
               s.old-price 30500 Р.
               p.price 25500 Р.
             .goods-item
+              .flag-item
               a(href="")
                 img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
               .hidden
@@ -168,6 +177,7 @@ html(lang="ru")
               s.old-price 22500 Р.
               p.price 15500 Р.
             .goods-item
+              .flag-item
               a(href="")
                 img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
               .hidden
@@ -185,6 +195,7 @@ html(lang="ru")
               h3.title Перфоратор BOSCH BFG 2000
               p.price 12500 Р.
             .goods-item
+              .flag-item
               a(href="")
                 img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
               .hidden
@@ -213,13 +224,13 @@ html(lang="ru")
             .pager
               ul.pager-list
                 li.pager-item
-                  a.current 1
+                  a.pager-item-link.current 1
                 li.pager-item
-                  a(href="") 2
+                  a.pager-item-link(href="") 2
                 li.pager-item
-                  a(href="") 3
+                  a.pager-item-link(href="") 3
                 li.pager-item
-                  a(href="") Следующая
+                  a.pager-item-link(href="") Следующая
       .about-puncher
         .container
           h3 пара слов о перфораторах
