--- a/index.pug
+++ b/index.pug
@@ -38,11 +38,12 @@ html(lang="ru")
               a.number(href="tel:+78125550555") +7 (812) 555-05-55
             p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
           .authorization
-            a.enter(href="login.html" aria-label="login") Войти
-              svg(xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17")
-                path(fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z")
-                path(fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z")
-            a.registration(href="registration.html") Регистриция
+            .user-enter
+              a.enter(href="login.html" aria-label="login") Войти
+                svg(xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17")
+                  path(fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z")
+                  path(fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z")
+              a.registration(href="registration.html") Регистриция
         nav.navigation
           ul.navigation-list
             li.navigation-item
