--- a/catalog.pug
+++ b/catalog.pug
@@ -19,12 +19,10 @@ html(lang="ru")
                 svg(xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17")
                   path(fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
           .bookmarks
-            .bookmark-icon
-            a(href="") закладки:
+            a.bookmark-icon(href="") закладки:
             span 0
           .cart
-            .cart-icon
-            a(href="") корзина:
+            a.cart-icon(href="") корзина:
             span 10
           a.order(href="") оформить заказ
       .container
@@ -43,15 +41,15 @@ html(lang="ru")
                 svg(xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18")
                   path(fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z")
                 p.user Равшан Джамшутович
-                a.logout(href="")
-                  svg(xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17")
-                    path(fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z")
-                    path(fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z")
+              a.logout(href="")
+                svg(xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17")
+                  path(fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z")
+                  path(fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z")
             ul.personal
               li.personal-item
-                a(href="") Мои Заказы
+                a.personal-item-link(href="") Мои Заказы
               li.personal-item
-                a(href="") Личный кабинет
+                a.personal-item-link(href="") Личный кабинет
         nav.navigation
           ul.navigation-list
             li.navigation-item
@@ -144,7 +142,7 @@ html(lang="ru")
               a(href="")
                 img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
               .hidden
-                a(href="") купить
+                a.buy(href="") купить
                 button(type="submit") в закладки
               h3.title Перфоратор BOSCH BFG 3000
               s.old-price 22500 Р.
@@ -153,7 +151,7 @@ html(lang="ru")
               a(href="")
                 img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
               .hidden
-                a(href="") купить
+                a.buy(href="") купить
                 button(type="submit") в закладки
               h3.title Перфоратор BOSCH BFG 6000
               s.old-price 30500 Р.
@@ -163,7 +161,8 @@ html(lang="ru")
               a(href="")
                 img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
               .hidden
-                a(href="") купить
+                .flag-item
+                a.buy(href="") купить
                 button(type="submit") в закладки
               h3.title Перфоратор BOSCH BFG 2000
               p.price 12500 Р.
@@ -171,7 +170,7 @@ html(lang="ru")
               a(href="")
                 img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
               .hidden
-                a(href="") купить
+                a.buy(href="") купить
                 button(type="submit") в закладки
               h3.title Перфоратор BOSCH BFG 3000
               s.old-price 22500 Р.
@@ -181,7 +180,8 @@ html(lang="ru")
               a(href="")
                 img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
               .hidden
-                a(href="") купить
+                .flag-item
+                a.buy(href="") купить
                 button(type="submit") в закладки
               h3.title Перфоратор BOSCH BFG 6000
               s.old-price 30500 Р.
@@ -190,7 +190,7 @@ html(lang="ru")
               a(href="")
                 img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
               .hidden
-                a(href="") купить
+                a.buy(href="") купить
                 button(type="submit") в закладки
               h3.title Перфоратор BOSCH BFG 2000
               p.price 12500 Р.
@@ -199,7 +199,8 @@ html(lang="ru")
               a(href="")
                 img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
               .hidden
-                a(href="") купить
+                .flag-item
+                a.buy(href="") купить
                 button(type="submit") в закладки
               h3.title Перфоратор BOSCH BFG 3000
               s.old-price 22500 Р.
@@ -208,7 +209,7 @@ html(lang="ru")
               a(href="")
                 img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
               .hidden
-                a(href="") купить
+                a.buy(href="") купить
                 button(type="submit") в закладки
               h3.title Перфоратор BOSCH BFG 6000
               s.old-price 30500 Р.
@@ -217,7 +218,7 @@ html(lang="ru")
               a(href="")
                 img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
               .hidden
-                a(href="") купить
+                a.buy(href="") купить
                 button(type="submit") в закладки
               h3.title Перфоратор BOSCH BFG 2000
               p.price 12500 Р.
@@ -238,7 +239,7 @@ html(lang="ru")
     footer.page-footer
       .footer-top-row
         .container
-          a.logo-bottom(href="index.html" alt="logo" aria-label="main-page")
+          .logo-bottom
             img(src="img/logo-technomart.svg", alt="logo")
           ul.footer-nav
             li.footer-nav-item
@@ -251,33 +252,33 @@ html(lang="ru")
               a(href="") Доставка
             li.footer-nav-item
               a(href="") Контакты
-        .footer-middle-row
-          .container
-            p.footer-address г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
-              a(href="tel:+78125550555") +7 (812) 555-05-55
-            ul.footer-category
-              li.footer-category-item
-                a(href="") Материалы
-              li.footer-category-item
-                a(href="") Техника
-              li.footer-category-item
-                a(href="") Инструмент
-              li.footer-category-item
-                a(href="") Спецпредложения
-        .footer-bottom-row
-          .container
-            p.footer-rights © 2010-2017 Компания "Техномарт" Все права защищены
-            section.socials
-              .social-item.vk
-                a(href="vk.com" target="_blank" aria-label="vk")
-              .social-item.facebook
-                a(href="facebook.com" target="_blank" aria-label="facebook")
-              .social-item.instagram
-                a(href="instagram.com" target="_blank" aria-label="instagram")
-            p.feedback Обратная связь
-              a(href="mailto:mail@htmlacademy.ru") mail@htmlacademy.ru
-            p.developed Разработано
-              a(href="https://htmlacademy.ru/intensive/htmlcss" target="_blank") htmlacademy.ru
+      .footer-middle-row
+        .container
+          p.footer-address г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+            a(href="tel:+78125550555") +7 (812) 555-05-55
+          ul.footer-category
+            li.footer-category-item
+              a(href="") Материалы
+            li.footer-category-item
+              a(href="") Техника
+            li.footer-category-item
+              a(href="") Инструмент
+            li.footer-category-item
+              a(href="") Спецпредложения
+      .footer-bottom-row
+        .container
+          p.footer-rights © 2010-2017 Компания "Техномарт" Все права защищены
+          section.socials
+            .social-item.vk
+              a(href="vk.com" target="_blank" aria-label="vk")
+            .social-item.facebook
+              a(href="facebook.com" target="_blank" aria-label="facebook")
+            .social-item.instagram
+              a(href="instagram.com" target="_blank" aria-label="instagram")
+          p.feedback Обратная связь
+            a(href="mailto:mail@htmlacademy.ru") mail@htmlacademy.ru
+          p.developed Разработано
+            a(href="https://htmlacademy.ru/intensive/htmlcss" target="_blank") htmlacademy.ru
     .cart-popup
       .popup-message
         .icon-mark
