--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,6 @@ a {
 .bookmarks,
 .cart {
   display: flex;
-  padding: 14px 0 13px 17px;
   text-align: center;
   width: 150px;
   color: #fff;
@@ -140,36 +139,50 @@ a {
 .bookmarks:active,
 .cart:active {
   background-color: #161d29;
-  opacity: 0.6;
 }
 .bookmarks span,
 .cart span {
   margin-left: 5px;
 }
+.bookmark-icon,
+.cart-icon,
+span {
+  position: relative;
+  padding: 14px 0 13px;
+}
 .bookmark-icon {
-  margin-right: 13px;
+  padding-left: 44px;
+}
+.bookmark-icon:before {
+  content: '';
+  position: absolute;
+  top: 13px;
+  left: 17px;
   width: 14px;
   height: 16px;
-  background: url("../img/icon-bookmark.svg");
+  background: url("../img/icon-bookmark.svg") no-repeat;
+  background-position: 0 0;
   opacity: 0.3;
-}
-.bookmark-icon:hover {
-  opacity: 1;
-}
-.bookmark-icon:active {
-  opacity: 0.5;
 }
 .cart-icon {
-  margin-right: 17px;
+  padding-left: 50px;
+}
+.cart-icon:before {
+  content: '';
+  position: absolute;
+  top: 12px;
+  left: 18px;
   width: 15px;
   height: 15px;
-  background: url("../img/icon-cart.svg");
+  background: url("../img/icon-cart.svg") no-repeat;
   opacity: 0.3;
 }
-.cart-icon:hover {
+.bookmark-icon:hover:before,
+.cart-icon:hover:before {
   opacity: 1;
 }
-.cart-icon:active {
+.bookmark-icon:active:before,
+.cart-icon:active:before {
   opacity: 0.5;
 }
 .order {
@@ -255,7 +268,7 @@ a {
   background-color: #fff;
 }
 .user-login .user {
-  margin: 0 33px 0 14px;
+  margin: 0 32px 0 14px;
 }
 .user-login .user:hover {
   color: #000;
@@ -299,22 +312,37 @@ a {
   padding-left: 0;
   margin: 3px 0 0 17px;
 }
-.personal-item:first-child {
+.personal-item {
   list-style: none;
-  margin-right: 30px;
 }
-.personal-item a {
+.personal-item .personal-item-link {
+  padding-right: 32px;
+  position: relative;
   background-color: #f3f7f9;
   color: #32425c;
   font-size: 16px;
   text-decoration: underline;
 }
-.personal-item a:hover {
+.personal-item .personal-item-link:hover {
   color: #ee3643;
 }
-.personal-item a:active {
+.personal-item .personal-item-link:active {
   opacity: 0.3;
   color: #32425c;
+}
+.personal-item:first-child .personal-item-link:after {
+  content: '';
+  position: absolute;
+  top: 8px;
+  right: 15px;
+  width: 4px;
+  height: 5px;
+  background-color: #32425c;
+  border-radius: 50%;
+}
+.personal-item:first-child .personal-item-link:active:after {
+  opacity: 1;
+  background-color: #32425c;
 }
 /* catalog style end */
 .navigation {
@@ -343,7 +371,7 @@ a {
   background-color: #1d2739;
 }
 .navigation-link {
-  padding: 22px 30px;
+  padding: 22px 33px;
   display: inline-flex;
 }
 .categories {
@@ -353,7 +381,7 @@ a {
   display: flex;
 }
 .left-column .categories-item {
-  margin-right: 18px;
+  margin-right: 17px;
 }
 .categories-item {
   width: 300px;
@@ -422,18 +450,16 @@ a {
   padding: 26px 0 22px 25px;
 }
 .slider-item h3 {
-  color: #fff;
   font-size: 36px;
-  font-family: "Cuprum";
-  font-weight: bold;
   line-height: 36px;
   text-transform: uppercase;
+  margin-bottom: 3px;
 }
 .slider-item p {
   font-size: 18px;
   line-height: 24px;
   color: #fff;
-  margin-bottom: 113px;
+  margin-bottom: 126px;
 }
 .slider-item .btn {
   padding: 14px 45px;
@@ -474,6 +500,8 @@ a {
   position: absolute;
   top: 114px;
   padding: 0;
+  background-color: transparent;
+  cursor: pointer;
 }
 .prev {
   background-image: url("../img/icon-left.svg");
@@ -488,10 +516,10 @@ a {
   display: flex;
   padding-left: 0;
   margin: 0;
-  position: relative;
 }
 .breadcrumbs-item {
   list-style: none;
+  position: relative;
 }
 .breadcrumbs-item-link {
   font-size: 13px;
@@ -505,8 +533,8 @@ a {
   position: absolute;
   content: '';
   display: block;
-  top: 25px;
-  left: 212px;
+  top: 26px;
+  right: -3px;
   width: 8px;
   height: 12px;
   background: url("../img/icon-right-small.svg");
@@ -531,8 +559,8 @@ a {
   margin-top: 20px;
 }
 .aside {
-  margin-right: 20px;
-  width: 221px;
+  margin-right: 21px;
+  width: 220px;
   display: flex;
   flex-direction: column;
   font-size: 17px;
@@ -558,11 +586,12 @@ a {
 }
 .range-filter {
   margin: 21px 0 25px;
+  width: 220px;
+  box-sizing: content-box;
 }
 .range-controls {
   position: relative;
   margin-bottom: 9px;
-  width: 220px;
   padding: 39px 20px;
   background-color: #f7f3ec;
   border-radius: 5px;
@@ -598,17 +627,17 @@ a {
 .price-controls {
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 .price-controls input {
   width: 95px;
-  padding: 12px 0 12px 26px;
+  padding: 12px 0;
   border: none;
   border-radius: 5px;
   background: #f7f3ec;
   text-align: center;
-  position: relative;
 }
-.price-controls input:first-child:after {
+.price-controls:first-child input:after {
   content: "";
   position: absolute;
   top: 689px;
@@ -715,7 +744,7 @@ a {
 }
 .popular-header .popular-title {
   margin: 0 auto;
-  padding: 33px 349px 0 35px;
+  padding: 33px 308px 0 35px;
   color: #32425c;
   font-size: 30px;
   line-height: 30px;
@@ -724,12 +753,12 @@ a {
   vertical-align: top;
 }
 .popular-header .btn {
-  margin: 25px 24px 26px 0;
+  margin: 25px 24px 26px 41px;
   padding: 14px 55px;
   display: inline-block;
 }
 .popular-header .second-title {
-  padding: 33px 245px 30px 30px;
+  padding: 33px 205px 30px 30px;
 }
 .popular-header .second-btn {
   padding: 13px 69px;
@@ -808,14 +837,16 @@ a {
   text-transform: uppercase;
   background-color: #fff;
 }
-.hidden a {
+.hidden .buy {
+  padding: 14px 45px 14px 49px;
+  position: relative;
   box-shadow: inset 0 -3px 0 #367315;
   background-color: #63a63e;
 }
-.hidden a:hover {
+.hidden .buy:hover {
   background-color: #5fbb2d;
 }
-.hidden a:active {
+.hidden .buy:active {
   background-color: #518534;
 }
 .hidden button {
@@ -830,6 +861,29 @@ a {
 .hidden button:active {
   border: 3px solid #32425c;
   opacity: 0.3;
+}
+.hidden .buy:before {
+  content: '';
+  position: absolute;
+  top: 14px;
+  left: 13px;
+  width: 15px;
+  height: 15px;
+  background: url("../img/icon-cart.svg") no-repeat;
+  background-position: 0 0;
+  opacity: 0.3;
+}
+.hidden .buy:hover:before,
+.hidden .buy:active:before {
+  opacity: 1;
+}
+.hidden .flag-item {
+  background: url("../img/new_flag.png");
+  position: absolute;
+  width: 60px;
+  height: 59px;
+  left: 160px;
+  top: 0;
 }
 .flag-item {
   background: url("../img/new_flag.png");
@@ -899,11 +953,15 @@ a {
   margin-bottom: 28px;
 }
 .service-title h3 {
-  margin: 0 auto 35px;
+  margin-bottom: 35px;
   font-size: 30px;
   font-family: "Cuprum";
   line-height: 30px;
   text-transform: uppercase;
+}
+.service-title p {
+  width: 448px;
+  margin: 0;
 }
 .service-wrapper {
   display: flex;
@@ -1032,7 +1090,8 @@ a {
   width: 519px;
 }
 .about .text:nth-child(3) {
-  margin-bottom: 28px;
+  margin: 0 0 28px;
+  width: 400px;
 }
 .about .container {
   display: flex;
@@ -1075,13 +1134,16 @@ a {
   flex-direction: column;
 }
 .contacts .text {
-  width: 179px;
+  width: 180px;
   margin: 0 0 35px;
 }
 .contacts .btn {
   padding: 14px 59px 12px 63px;
   margin-top: 40px;
   width: 300px;
+}
+.contacts iframe {
+  border: 0;
 }
 /* catalog styles start */
 .pager {
@@ -1119,6 +1181,9 @@ a {
   background-color: #ee3643;
   color: #fff;
 }
+.pager-item:last-child .pager-item-link {
+  padding: 14px 32px;
+}
 .about-puncher {
   padding: 67px 0 73px;
   background-color: #f2f6f8;
@@ -1133,7 +1198,8 @@ a {
   font-size: 13px;
   font-family: "PT-Sans";
   line-height: 24px;
-  margin-right: 29px;
+  margin: 0;
+  width: 861px;
 }
 /* catalog styles end */
 .page-footer {
@@ -1324,10 +1390,24 @@ a {
   margin-bottom: 13px;
 }
 .half-width input,
-.full-width input {
+.full-width input,
+.half-width textarea,
+.full-width textarea {
   border: 2px solid #dee3e4;
   font-size: 13px;
   font-family: "PT-Sans";
+}
+.half-width input:hover,
+.full-width input:hover,
+.half-width textarea:hover,
+.full-width textarea:hover {
+  border: 2px solid #b5b5b5;
+}
+.half-width input:active,
+.full-width input:active,
+.half-width textarea:active,
+.full-width textarea:active {
+  border: 2px solid #ee3643;
 }
 .form-button {
   padding: 37px 80px;
