--- a/css/style.styl
+++ b/css/style.styl
@@ -44,6 +44,7 @@ $color-43 = #00ca74
 $color-44 = #ababab
 $color-45 = #cfcfcf
 $color-46 = #444444
+$color-47 = #b5b5b5
 
 html
   box-sizing border-box
@@ -166,7 +167,6 @@ a
 
 .bookmarks, .cart
   display flex
-  padding 14px 0 13px 17px
   text-align center
   width 150px
   color $color-01
@@ -174,31 +174,46 @@ a
     background-color $color-20
   &:active
     background-color $color-22
-    opacity .6
   span
     margin-left 5px
 
+.bookmark-icon, .cart-icon, span
+  position relative
+  padding 14px 0 13px
+
 .bookmark-icon
-  margin-right 13px
+  padding-left 44px
+
+.bookmark-icon:before
+  content ''
+  position absolute
+  top 13px
+  left 17px
   width 14px
   height 16px
-  background url('../img/icon-bookmark.svg')
+  background url('../img/icon-bookmark.svg') no-repeat
+  background-position 0 0
   opacity .3
-  &:hover
-    opacity 1
-  &:active
-    opacity .5
 
 .cart-icon
-  margin-right 17px
+  padding-left 50px
+
+.cart-icon:before
+  content ''
+  position absolute
+  top 12px
+  left 18px
   width 15px
   height 15px
-  background url('../img/icon-cart.svg')
+  background url('../img/icon-cart.svg') no-repeat
   opacity .3
-  &:hover
-    opacity 1
-  &:active
-    opacity .5
+
+.bookmark-icon:hover:before,
+.cart-icon:hover:before
+  opacity 1
+.bookmark-icon:active:before,
+.cart-icon:active:before
+  opacity .5
 
 .order
   padding-top 14px
@@ -274,7 +289,7 @@ a
   padding 14px 0 11px
   background-color $color-01
   .user
-    margin 0 33px 0 14px
+    margin 0 32px 0 14px
     &:hover
       color $color-07
     &:active
@@ -313,12 +328,11 @@ a
   padding-left 0
   margin 3px 0 0 17px
 
-.personal-item:first-child
-  list-style none
-  margin-right 30px
-
 .personal-item
-  a
+  list-style none
+  .personal-item-link
+    padding-right 32px
+    position relative
     background-color $color-03
     color $color-06
     font-size 16px
@@ -328,6 +342,20 @@ a
     &:active
       opacity 0.3
       color $color-06
+
+.personal-item:first-child
+  .personal-item-link:after
+    content ''
+    position absolute
+    top 8px
+    right 15px
+    width 4px
+    height 5px
+    background-color $color-06
+    border-radius 50%
+  .personal-item-link:active:after
+    opacity 1
+    background-color $color-06
 
 /* catalog style end */
 
@@ -354,7 +382,7 @@ a
     background-color $color-26
 
 .navigation-link
-  padding 22px 30px
+  padding 22px 33px
   display inline-flex
 
 .categories
@@ -364,7 +392,7 @@ a
 
 .left-column
   .categories-item
-    margin-right 18px
+    margin-right 17px
 
 .categories-item
   width 300px
@@ -427,17 +455,15 @@ a
 .slider-item
   padding 26px 0 22px 25px
   h3
-    color $color-01
     font-size 36px
-    font-family "Cuprum"
-    font-weight bold
     line-height 36px
     text-transform uppercase
+    margin-bottom 3px
   p
     font-size 18px
     line-height 24px
     color $color-01
-    margin-bottom 113px
+    margin-bottom 126px
   .btn
     padding 14px 45px
 
@@ -475,6 +501,8 @@ a
   position absolute
   top 114px
   padding 0
+  background-color transparent
+  cursor pointer
 
 .prev
   background-image url('../img/icon-left.svg')
@@ -490,10 +518,10 @@ a
   display flex
   padding-left 0
   margin 0
-  position relative
 
 .breadcrumbs-item
   list-style none
+  position relative
 
 .breadcrumbs-item-link
   font-size 13px
@@ -507,8 +535,8 @@ a
   position absolute
   content ''
   display block
-  top 25px
-  left 212px
+  top 26px
+  right -3px
   width 8px
   height 12px
   background url('../img/icon-right-small.svg')
@@ -533,8 +561,8 @@ a
   margin-top 20px
 
 .aside
-  margin-right 20px
-  width 221px
+  margin-right 21px
+  width 220px
   display flex
   flex-direction column
   font-size 17px
@@ -559,11 +587,12 @@ a
 
 .range-filter
   margin 21px 0 25px
+  width 220px
+  box-sizing content-box
 
 .range-controls
   position relative
   margin-bottom 9px
-  width 220px
   padding 39px 20px
   background-color $color-33
   border-radius 5px
@@ -594,15 +623,17 @@ a
 .price-controls
   display flex
   justify-content space-between
+  position relative
   input
     width 95px
-    padding 12px 0 12px 26px
+    padding 12px 0
     border none
     border-radius 5px
     background $color-33
     text-align center
-    position relative
-  input:first-child:after
+
+.price-controls:first-child
+  input:after
     content ""
     position absolute
     top 689px
@@ -699,7 +730,7 @@ a
   margin-bottom 20px
   .popular-title
     margin 0 auto
-    padding 33px 349px 0 35px
+    padding 33px 308px 0 35px
     color $color-06
     font-size 30px
     line-height 30px
@@ -707,11 +738,11 @@ a
     display inline-block
     vertical-align top
   .btn
-    margin 25px 24px 26px 0
+    margin 25px 24px 26px 41px
     padding 14px 55px
     display inline-block
   .second-title
-    padding 33px 245px 30px 30px
+    padding 33px 205px 30px 30px
   .second-btn
     padding 13px 69px
 
@@ -779,7 +810,9 @@ a
   line-height 18px
   text-transform uppercase
   background-color $color-01
-  a
+  .buy
+    padding 14px 45px 14px 49px
+    position relative
     box-shadow inset 0 -3px 0 $color-28
     background-color $color-25
     &:hover
@@ -796,6 +829,26 @@ a
     &:active
       border 3px solid $color-06
       opacity 0.3
+  .buy:before
+    content ''
+    position absolute
+    top 14px
+    left 13px
+    width 15px
+    height 15px
+    background url('../img/icon-cart.svg') no-repeat
+    background-position 0 0
+    opacity .3
+  .buy:hover:before,
+  .buy:active:before
+    opacity 1
+  .flag-item
+    background url('../img/new_flag.png')
+    position absolute
+    width 60px
+    height 59px
+    left 160px
+    top 0
 
 .flag-item
   background url('../img/new_flag.png')
@@ -853,11 +906,14 @@ a
   padding-top 68px
   margin-bottom 28px
   h3
-    margin 0 auto 35px
+    margin-bottom 35px
     font-size 30px
     font-family "Cuprum"
     line-height 30px
     text-transform uppercase
+  p
+    width 448px
+    margin 0
 
 .service-wrapper
   display flex
@@ -969,7 +1025,8 @@ a
     margin-bottom 35px
     width 519px
   .text:nth-child(3)
-    margin-bottom 28px
+    margin 0 0 28px
+    width 400px
   .container
     display flex
 
@@ -1007,12 +1064,14 @@ a
   display flex
   flex-direction column
   .text
-    width 179px
+    width 180px
     margin 0 0 35px
   .btn
     padding 14px 59px 12px 63px
     margin-top 40px
     width 300px
+  iframe
+    border 0
 
 /* catalog styles start */
 
@@ -1047,6 +1106,10 @@ a
     background-color $color-04
     color $color-01
 
+.pager-item:last-child
+  .pager-item-link
+    padding 14px 32px
+
 .about-puncher
   padding 67px 0 73px
   background-color $color-29
@@ -1059,7 +1122,8 @@ a
     font-size 13px
     font-family "PT-Sans"
     line-height 24px
-    margin-right 29px
+    margin 0
+    width 861px
 
 /* catalog styles end */
 
@@ -1236,10 +1300,14 @@ a
 .half-width, .full-width
   label
     margin-bottom 13px
-  input
+  input, textarea
     border 2px solid $color-38
     font-size 13px
     font-family "PT-Sans"
+    &:hover
+      border 2px solid $color-47
+    &:active
+      border 2px solid $color-04
 
 .form-button
   padding 37px 80px
